fix to account for scrollbar width

--- a/A2/style.css
+++ b/A2/style.css
@@ -5,6 +5,10 @@
     font-style: normal;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 html {
     background-color: #F9FAFB;
 }
@@ -59,6 +63,7 @@ header img {
     width: 165px;
     height: 44px;
     padding: 10px 18px;
+
 
 
     background: #7F56D9;
@@ -210,6 +215,7 @@ footer ul {
         right: 20px;
         height: 50px;
         width: 50px;
+        overflow-y: overlay;
 
         display: flex;
         justify-content: center;
@@ -225,9 +231,9 @@ footer ul {
     #dash {
         display: none;
 
-        position: absolute;
-        top: 220px;
-        right: -1px;
+        position: fixed;
+        top: 236px;
+        right: 20px;
         width: 139px;
 
         border: 1px solid #280d63;
